--- a/dev/02-templates/02-00-configuration.html
+++ b/dev/02-templates/02-00-configuration.html
@@ -171,6 +171,13 @@ name-templates:
 
 ...
 </code></pre>
+<blockquote>
+<p><i class="fa fa-exclamation-circle"></i> Note that the final rendered output
+file will not include its template's configuration. Additionally, if the
+configuration ended with trailing linebreaks, a single one of them is
+removed. This allow for some extra whitespace while working with a template
+without affecting final rendered output.</p>
+</blockquote>
 <p>A quick rundown of each configuration key:</p>
 <div class="table-wrapper"><table><thead><tr><th>Key</th><th>Description</th></tr></thead><tbody>
 <tr><td><code>group</code></td><td>The <a href="./02-01-template-groups.html">Template Group</a> name.</td></tr>
