deploy: 0fc9a6e902564aec5476d610beb717a4173af7a9

--- a/dev/print.html
+++ b/dev/print.html
@@ -161,12 +161,6 @@
  └─ ...
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="render"><a class="header" href="#render">Render</a></h1>
-<h2 id="options"><a class="header" href="#options">Options</a></h2>
-<h3 id="--templates"><a class="header" href="#--templates"><code>--templates</code></a></h3>
-<h3 id="--template"><a class="header" href="#--template"><code>--template</code></a></h3>
-<h3 id="--extract-tags"><a class="header" href="#--extract-tags"><code>--extract-tags</code></a></h3>
-<h3 id="--deunicode"><a class="header" href="#--deunicode"><code>--deunicode</code></a></h3>
-<h3 id="--trim-blocks"><a class="header" href="#--trim-blocks"><code>--trim-blocks</code></a></h3>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="backup"><a class="header" href="#backup">Backup</a></h1>
 <pre><code class="language-plaintext">[ouput-directory]
  │
@@ -184,8 +178,9 @@
  │   └─ ...
  └─ ...
 </code></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="options-1"><a class="header" href="#options-1">Options</a></h1>
-<h2 id="databases"><a class="header" href="#databases">Databases</a></h2>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="options"><a class="header" href="#options">Options</a></h1>
+<h2 id="global"><a class="header" href="#global">Global</a></h2>
+<h3 id="--databases-directory"><a class="header" href="#--databases-directory"><code>--databases-directory</code></a></h3>
 <p>Setting a custom database directory:</p>
 <p>The <code>databases</code> directory should contains the following structure as this is the
 way Apple Books' <code>Documents</code> directory is set up. This is also how backup
@@ -201,6 +196,20 @@ directories are created when backing up databases with ReadStor.</p>
  │  └─ ...
  └─ ...
 </code></pre>
+<h3 id="--output-directory"><a class="header" href="#--output-directory"><code>--output-directory</code></a></h3>
+<h3 id="--force"><a class="header" href="#--force"><code>--force</code></a></h3>
+<h3 id="--quiet"><a class="header" href="#--quiet"><code>--quiet</code></a></h3>
+<h2 id="template-options"><a class="header" href="#template-options">Template Options</a></h2>
+<h3 id="--templates-directory"><a class="header" href="#--templates-directory"><code>--templates-directory</code></a></h3>
+<h3 id="--template-group"><a class="header" href="#--template-group"><code>--template-group</code></a></h3>
+<h3 id="--trim-blocks"><a class="header" href="#--trim-blocks"><code>--trim-blocks</code></a></h3>
+<h2 id="pre-process-options"><a class="header" href="#pre-process-options">Pre-process Options</a></h2>
+<h3 id="--extract-tags"><a class="header" href="#--extract-tags"><code>--extract-tags</code></a></h3>
+<h3 id="--normalize-linebreaks"><a class="header" href="#--normalize-linebreaks"><code>--normalize-linebreaks</code></a></h3>
+<h3 id="--ascii-all"><a class="header" href="#--ascii-all"><code>--ascii-all</code></a></h3>
+<h3 id="--ascii-symbols"><a class="header" href="#--ascii-symbols"><code>--ascii-symbols</code></a></h3>
+<!-- [Daring Fireball - SmartyPants](https://daringfireball.net/projects/smartypants/) -->
+<!-- [Python-Markdown - SmartyPants](https://python-markdown.github.io/extensions/smarty/) -->
 <div style="break-before: page; page-break-before: always;"></div><h1 id="templates"><a class="header" href="#templates">Templates</a></h1>
 <p>ReadStor's most powerful feature is the templating interface it provides for
 Apple Books. Templates can be designed to output almost any kind of text-based
