deploy: 6501081efa9ed7c45399e73eb0c5c0a9574d0641

--- a/dev/print.html
+++ b/dev/print.html
@@ -180,7 +180,7 @@
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="options"><a class="header" href="#options">Options</a></h1>
 <h2 id="global"><a class="header" href="#global">Global</a></h2>
-<h3 id="--databases-directory"><a class="header" href="#--databases-directory"><code>--databases-directory</code></a></h3>
+<h3 id="--databases-directory-path"><a class="header" href="#--databases-directory-path"><code>--databases-directory &lt;PATH&gt;</code></a></h3>
 <p>Setting a custom database directory:</p>
 <p>The <code>databases</code> directory should contains the following structure as this is the
 way Apple Books' <code>Documents</code> directory is set up. This is also how backup
@@ -196,12 +196,12 @@ directories are created when backing up databases with ReadStor.</p>
  │  └─ ...
  └─ ...
 </code></pre>
-<h3 id="--output-directory"><a class="header" href="#--output-directory"><code>--output-directory</code></a></h3>
+<h3 id="--output-directory-path"><a class="header" href="#--output-directory-path"><code>--output-directory &lt;PATH&gt;</code></a></h3>
 <h3 id="--force"><a class="header" href="#--force"><code>--force</code></a></h3>
 <h3 id="--quiet"><a class="header" href="#--quiet"><code>--quiet</code></a></h3>
 <h2 id="template-options"><a class="header" href="#template-options">Template Options</a></h2>
-<h3 id="--templates-directory"><a class="header" href="#--templates-directory"><code>--templates-directory</code></a></h3>
-<h3 id="--template-group"><a class="header" href="#--template-group"><code>--template-group</code></a></h3>
+<h3 id="--templates-directory-path"><a class="header" href="#--templates-directory-path"><code>--templates-directory &lt;PATH&gt;</code></a></h3>
+<h3 id="--template-group-group"><a class="header" href="#--template-group-group"><code>--template-group &lt;GROUP&gt;</code></a></h3>
 <h3 id="--trim-blocks"><a class="header" href="#--trim-blocks"><code>--trim-blocks</code></a></h3>
 <h2 id="pre-process-options"><a class="header" href="#pre-process-options">Pre-process Options</a></h2>
 <h3 id="--extract-tags"><a class="header" href="#--extract-tags"><code>--extract-tags</code></a></h3>
