deploy: db02359c3d22c4c23723ae4139a894302e7a93e0

--- a/dev/print.html
+++ b/dev/print.html
@@ -1302,7 +1302,7 @@ config. See <a href="02-templates/./02-05-name-templates.html">Name Templates</a
 <tr><td><code>links.annotations</code></td><td>dictionary</td><td>annotations object</td></tr>
 <tr><td><code>links.annotations - key:_</code></td><td>string</td><td>annotation id</td></tr>
 <tr><td><code>links.annotations - _:value</code></td><td>string</td><td>rendered annotation file name</td></tr>
-<tr><td><code>links.directorty</code></td><td>string</td><td>rendered directory name</td></tr>
+<tr><td><code>links.directory</code></td><td>string</td><td>rendered directory name</td></tr>
 </tbody></table>
 </div>
 <h2 id="example-data---links"><a class="header" href="#example-data---links">Example Data - Links</a></h2>
