--- a/dev/01-templates/02-00-configuration.html
+++ b/dev/01-templates/02-00-configuration.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Options - ReadStor</title>
+        <title>Configuration - ReadStor</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../00-intro/00-intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../01-usage/00-usage.html"><strong aria-hidden="true">1.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-usage/01-export.html"><strong aria-hidden="true">1.1.</strong> Export</a></li><li class="chapter-item expanded "><a href="../01-usage/02-render.html"><strong aria-hidden="true">1.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../01-usage/03-backup.html"><strong aria-hidden="true">1.3.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../01-usage/04-options.html" class="active"><strong aria-hidden="true">1.4.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../02-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../02-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../02-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../02-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../02-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../02-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../02-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../02-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../03-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../03-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../03-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html" class="active"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -114,7 +114,7 @@
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/01-usage/04-options.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/01-templates/02-00-configuration.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
                     </div>
@@ -141,47 +141,60 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="options"><a class="header" href="#options">Options</a></h1>
-<h2 id="global"><a class="header" href="#global">Global</a></h2>
-<h3 id="--databases-directory-path"><a class="header" href="#--databases-directory-path"><code>--databases-directory &lt;PATH&gt;</code></a></h3>
-<p>Setting a custom database directory:</p>
-<p>The <code>databases</code> directory should contains the following structure as this is the
-way Apple Books' <code>Documents</code> directory is set up. This is also how backup
-directories are created when backing up databases with ReadStor.</p>
-<pre><code class="language-plaintext">[databases]
- │
- ├─ AEAnnotation
- │  ├─ AEAnnotation*.sqlite
- │  └─ ...
- │
- ├─ BKLibrary
- │  ├─ BKLibrary*.sqlite
- │  └─ ...
- └─ ...
+                        <h1 id="configuration"><a class="header" href="#configuration">Configuration</a></h1>
+<p>A template's configuration describes both what the template expects to render
+and how the output structure and naming should be.
+Every template must start with a configuration block.</p>
+<h2 id="overview"><a class="header" href="#overview">Overview</a></h2>
+<p>The configuration starts off as a basic HTML comment tag...</p>
+<pre><code class="language-markdown">&lt;!-- --&gt;
 </code></pre>
-<h3 id="--output-directory-path"><a class="header" href="#--output-directory-path"><code>--output-directory &lt;PATH&gt;</code></a></h3>
-<h3 id="--force"><a class="header" href="#--force"><code>--force</code></a></h3>
-<h3 id="--quiet"><a class="header" href="#--quiet"><code>--quiet</code></a></h3>
-<h2 id="template-options"><a class="header" href="#template-options">Template Options</a></h2>
-<h3 id="--templates-directory-path"><a class="header" href="#--templates-directory-path"><code>--templates-directory &lt;PATH&gt;</code></a></h3>
-<h3 id="--template-group-group"><a class="header" href="#--template-group-group"><code>--template-group &lt;GROUP&gt;</code></a></h3>
-<h3 id="--trim-blocks"><a class="header" href="#--trim-blocks"><code>--trim-blocks</code></a></h3>
-<h2 id="pre-process-options"><a class="header" href="#pre-process-options">Pre-process Options</a></h2>
-<h3 id="--extract-tags"><a class="header" href="#--extract-tags"><code>--extract-tags</code></a></h3>
-<h3 id="--normalize-linebreaks"><a class="header" href="#--normalize-linebreaks"><code>--normalize-linebreaks</code></a></h3>
-<h3 id="--ascii-all"><a class="header" href="#--ascii-all"><code>--ascii-all</code></a></h3>
-<h3 id="--ascii-symbols"><a class="header" href="#--ascii-symbols"><code>--ascii-symbols</code></a></h3>
-<!-- [Daring Fireball - SmartyPants](https://daringfireball.net/projects/smartypants/) -->
-<!-- [Python-Markdown - SmartyPants](https://python-markdown.github.io/extensions/smarty/) -->
+<p>... with the word <code>readstor</code>...</p>
+<pre><code class="language-markdown">&lt;!-- readstor --&gt;
+</code></pre>
+<p>...and a new line.</p>
+<pre><code class="language-markdown">&lt;!-- readstor
 
+--&gt;
+</code></pre>
+<p>The YAML configuration is then placed inside the tag. For example:</p>
+<pre><code class="language-markdown">&lt;!-- readstor
+group: my-vault
+context: book
+structure: nested
+extension: md
+name-templates:
+  book: &quot;{{ book.author }} - {{ book.title }}&quot;
+  annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
+  directory: &quot;{{ book.author }} - {{ book.title }}&quot;
+--&gt;
+
+...
+</code></pre>
+<blockquote>
+<p><i class="fa fa-exclamation-circle"></i> Note that the final rendered output
+file will not include its template's configuration. Additionally, if the
+configuration ended with trailing linebreaks, a single one of them is
+removed. This allows for some extra whitespace while working with a template
+without affecting final rendered output.</p>
+</blockquote>
+<p>A quick rundown of each configuration key:</p>
+<div class="table-wrapper"><table><thead><tr><th>Key</th><th>Description</th></tr></thead><tbody>
+<tr><td><code>group</code></td><td>The <a href="./02-01-template-groups.html">Template Group</a> name.</td></tr>
+<tr><td><code>context</code></td><td>The <a href="./02-02-context-modes.html">Context Mode</a> or what the template will render.</td></tr>
+<tr><td><code>structure</code></td><td>The <a href="./02-03-structure-modes.html">Structure Mode</a> or how the output files will be structured.</td></tr>
+<tr><td><code>extension</code></td><td>The template's output <a href="./02-04-file-extensions.html">File Extension</a>.</td></tr>
+<tr><td><code>name-templates</code></td><td>The <a href="./02-05-name-templates.html">Name Templates</a> for generating file and directory names.</td></tr>
+</tbody></table>
+</div>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../01-usage/03-backup.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../01-templates/01-an-example-template.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../02-templates/00-templates.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../01-templates/02-01-template-groups.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -190,10 +203,10 @@ directories are created when backing up databases with ReadStor.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../01-usage/03-backup.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../01-templates/01-an-example-template.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../02-templates/00-templates.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../01-templates/02-01-template-groups.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
