--- a/dev/01-templates/03-partial-templates.html
+++ b/dev/01-templates/03-partial-templates.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Templates - ReadStor</title>
+        <title>Partial Templates - ReadStor</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../00-intro/00-intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../01-usage/00-usage.html"><strong aria-hidden="true">1.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-usage/01-export.html"><strong aria-hidden="true">1.1.</strong> Export</a></li><li class="chapter-item expanded "><a href="../01-usage/02-render.html"><strong aria-hidden="true">1.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../01-usage/03-backup.html"><strong aria-hidden="true">1.3.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../01-usage/04-options.html"><strong aria-hidden="true">1.4.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/00-templates.html" class="active"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../02-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../02-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../02-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../02-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../02-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../02-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../02-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../02-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../02-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../02-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../03-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../03-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../03-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-name-templates.html"><strong aria-hidden="true">2.2.5.</strong> Name Templates</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html" class="active"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-links.html"><strong aria-hidden="true">2.6.3.</strong> Links</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -114,7 +114,7 @@
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/02-templates/00-templates.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/01-templates/03-partial-templates.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
                     </div>
@@ -141,24 +141,60 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="templates"><a class="header" href="#templates">Templates</a></h1>
-<p>ReadStor's most powerful feature is the templating interface it provides for
-Apple Books. Templates can be designed to output almost any kind of text-based
-file format including: Markdown, HTML, CSV. PDFs are possible as well but would
-require an extra step to convert an HTML file to the final PDF.</p>
+                        <h1 id="partial-templates"><a class="header" href="#partial-templates">Partial Templates</a></h1>
+<p>When working with larger templates it can be helpful to separate them into
+smaller building blocks. One way to do this is to create partial templates and
+<code>include</code> them in other templates.</p>
+<p>Partial templates differ in two important ways from their normal template
+counterparts.</p>
+<ol>
+<li>
+<p>They <em>must</em> begin with an underscore <code>_</code> as this is currently the only
+indicator of whether a template is partial or not.</p>
+</li>
+<li>
+<p>They require no configuration block as they inherit their configuration from
+the template that <code>include</code>s them.</p>
+</li>
+</ol>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> See the default <a href="https://github.com/tnahs/readstor/tree/main/templates">templates</a>
-for fully working examples.</p>
+<p><i class="fa fa-info-circle"></i> See the <a href="https://github.com/tnahs/readstor/tree/main/templates/using-partials">using-partials</a>
+templates for a fully working example.</p>
+</blockquote>
+<h2 id="including-a-partial-template"><a class="header" href="#including-a-partial-template">Including a Partial Template</a></h2>
+<p>Partial templates are included using the <code>include</code> tag:</p>
+<pre><code class="language-jinja2">{% include &quot;_my-partial-template.md&quot; %}
+</code></pre>
+<p>Where <code>&quot;_my-partial-template.md&quot;</code> is a path relative to to the
+<a href="../00-intro/02-options.html#--templates-directory-path">templates directory</a>. Therefore, this would be pointing
+to a template at the root of the <a href="../00-intro/02-options.html#--templates-directory-path">templates directory</a>.
+If we wanted to organize our templates into different directories we would
+have to add the directory names for any directories between the including
+template and the <a href="../00-intro/02-options.html#--templates-directory-path">templates directory</a>.</p>
+<p>For example, with the following structure:</p>
+<pre><code class="language-plaintext">[templates-directory]
+ └── my-vault-templates
+      ├── _annotation.md
+      ├── _book.md
+      └── template.md
+</code></pre>
+<p>We would use the following <code>include</code> tags:</p>
+<pre><code class="language-jinja2">{% include &quot;my-vault-templates/_book.jinja2&quot; %}
+{% include &quot;my-vault-templates/_annotation.jinja2&quot; %}
+</code></pre>
+<blockquote>
+<p><i class="fa fa-info-circle"></i> See the documentation for <a href="https://tera.netlify.app/docs/#include">include</a>
+for more information on its features and limitations.</p>
 </blockquote>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../01-usage/04-options.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../01-templates/02-05-name-templates.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../02-templates/01-an-example-template.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../01-templates/04-backlinks.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -167,10 +203,10 @@ for fully working examples.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../01-usage/04-options.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../01-templates/02-05-name-templates.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../02-templates/01-an-example-template.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../01-templates/04-backlinks.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
