deploy: 7cbc5ad330ee2c199699e473ed6fc4ab06ff4cd5

--- a/dev/print.html
+++ b/dev/print.html
@@ -7,7 +7,7 @@
         <meta name="robots" content="noindex" />
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <meta name="description" content="">
+        <meta name="description" content="A CLI for Apple Books annotations">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
@@ -1451,8 +1451,7 @@ objects, under the name <code>annotations</code>, are injected into the template
 <tr><td><code>annotation.metadata.slugs.created</code></td><td>string</td><td>date created slugified</td></tr>
 <tr><td><code>annotation.metadata.slugs.modified</code></td><td>string</td><td>date modified slugified</td></tr>
 </tbody></table>
-</div><!-- TODO: Add a note on highlight style/color. -->
-<!-- TODO: Add a note on tags when tag extraction flag is implemented. -->
+</div>
 <h2 id="example-data---annotation"><a class="header" href="#example-data---annotation">Example Data - Annotation</a></h2>
 <pre><code class="language-json">{
   &quot;body&quot;: &quot;Of course it is not easy to go one’s road...&quot;,
