--- a/dev/01-templates/02-02-context-modes.html
+++ b/dev/01-templates/02-02-context-modes.html
@@ -6,7 +6,7 @@
         <title>Context Modes - ReadStor</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <meta name="description" content="">
+        <meta name="description" content="A CLI for Apple Books annotations">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
